my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/nest-align-1.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/nest-align-1.c:26:5: error: function definition is not allowed here
   26 |     {
      |     ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/nest-align-1.c:30:3: error: call to undeclared function 'bar'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   30 |   bar ();
      |   ^
2 errors generated.
